# MetaTagsParser

./: .gitignore  CMakeLists.txt  FlacTagParser.cpp  FlacTagParser.hpp  ID3V2Parser.cpp  ID3V2Parser.hpp  ID3V2Parser.pro  ID3V2Parser.pro.user.5843f80  ID3V2Parser.pro.user.af78bf8  Mp3FrameParser.cpp  Mp3FrameParser.hpp  Tag.cpp  Tag.hpp  TagScout.cpp  TagScout.hpp  WavParser.cpp  WavParser.hpp  main.cpp  util.cpp  util.hpp
